fix(borders): update borders for high contrast mode (#341)
* fix(borders): update borders for high contrast mode

Update the borders for buttons and input fields to appear in high contrast mode on Edge in Windows 10.

fixes https://github.com/patternfly/patternfly-next/issues/286

* fix(borders): replace box-shadows with borders

--- a/src/patternfly/components/Dropdown/styles.scss
+++ b/src/patternfly/components/Dropdown/styles.scss
@@ -24,7 +24,8 @@
 
   // Menu
   --pf-c-dropdown__menu--BackgroundColor: var(--pf-global--BackgroundColor--light-200);
-  --pf-c-dropdown__menu--BoxShadow: var(--pf-global--BoxShadow--sm);
+  --pf-c-dropdown__menu--BorderWidth: var(--pf-global--BorderWidth--sm);
+  --pf-c-dropdown__menu--BorderColor: var(--pf-global--BorderColor);
   --pf-c-dropdown__menu--PaddingTop: var(--pf-global--spacer--sm);
   --pf-c-dropdown__menu--PaddingBottom: var(--pf-global--spacer--sm);
   --pf-c-dropdown__menu--ZIndex: var(--pf-global--ZIndex--xs);
@@ -55,16 +56,16 @@
     line-height: var(--pf-c-dropdown__toggle--LineHeight);
     color: var(--pf-c-dropdown__toggle--Color);
     background-color: var(--pf-c-dropdown__toggle--BackgroundColor);
-    border: none;
-    box-shadow: inset 0 0 0 var(--pf-c-dropdown__toggle--BorderWidth) var(--pf-c-dropdown__toggle--BorderColor);
+    border: var(--pf-c-dropdown__toggle--BorderWidth) solid var(--pf-c-dropdown__toggle--BorderColor);
 
     &:hover {
-      box-shadow: inset 0 0 0 var(--pf-c-dropdown__toggle--hover--BorderWidth) var(--pf-c-dropdown__toggle--hover--BorderColor);
+      border-color: var(--pf-c-dropdown__toggle--hover--BorderColor);
     }
 
     &:active,
     .pf-m-expanded > & {
-      box-shadow: inset 0 0 0 var(--pf-c-dropdown__toggle--m-expanded--BorderWidth) var(--pf-c-dropdown__toggle--m-expanded--BorderColor);
+      border-color: var(--pf-c-dropdown__toggle--m-expanded--BorderColor);
+      border-width: var(--pf-c-dropdown__toggle--m-expanded--BorderWidth);
     }
 
     .pf-m-ghost > & {
@@ -106,7 +107,7 @@
     padding-top: var(--pf-c-dropdown__menu--PaddingTop);
     padding-bottom: var(--pf-c-dropdown__menu--PaddingBottom);
     background: var(--pf-c-dropdown__menu--BackgroundColor);
-    box-shadow: var(--pf-c-dropdown__menu--BoxShadow);
+    border: var(--pf-c-dropdown__menu--BorderWidth) solid transparent;
 
     .pf-m-right-aligned > & {
       right: 0;
