--- a/src/patternfly/components/ModalBox/styles.scss
+++ b/src/patternfly/components/ModalBox/styles.scss
@@ -3,6 +3,8 @@
 .pf-c-modal-box {
   // Component variables
   --pf-c-modal-box--BackgroundColor: var(--pf-global--BackgroundColor--light-100);
+  --pf-c-modal-box--BorderColor: transparent;
+  --pf-c-modal-box--BorderSize: var(--pf-global--BorderWidth--sm);
   --pf-c-modal-box--BoxShadow: var(--pf-global--BoxShadow--lg);
   --pf-c-modal-box--ZIndex: var(--pf-global--ZIndex--xxl);
   // MaxWidth is based on optimal line length for reading
@@ -31,7 +33,7 @@
   --pf-c-modal-box__footer--PaddingBottom: var(--pf-global--spacer--xl);
   --pf-c-modal-box__footer--PaddingLeft: var(--pf-global--spacer--xl);
 
-  // This component always needs to be light  
+  // This component always needs to be light
   @extend %pf-t-light;
 
   z-index: var(--pf-c-modal-box--ZIndex);
@@ -41,6 +43,7 @@
   min-height: var(--pf-c-modal-box--MinHeight);
   max-height: var(--pf-c-modal-box--MaxHeight);
   background-color: var(--pf-c-modal-box--BackgroundColor);
+  border: var(--pf-c-modal-box--BorderSize) solid var(--pf-c-modal-box--BorderColor);
   box-shadow: var(--pf-c-modal-box--BoxShadow);
 
   &.pf-m-lg {
